# appsec-sentinel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPENDENCIES.md  LICENSE  MCP_INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  THREAT_MODELING.md  action.yml  env.example  pyproject.toml  pytest.ini  requirements-web.txt  requirements.txt  run_tests.sh  start_cli.sh  start_web.sh
.claude/: CLAUDE.md
.github/workflows/: ci.yml
ci-cd/: SETUP.md  security-scan.yml
clients/: SETUP.md  security-scan.yml
clients/client_exports/: .gitkeep  README.md
configs/: checkstyle.xml  clippy.toml  eslint.config.js  eslintrc.v8.json  golangci.yml  phpstan.neon  rubocop.yml
examples/: api_usage_examples.sh
mcp/: MCP_INTEGRATION_GUIDE.md  README.md  appsec_mcp_server.py  mcp_env.example
outputs/: pr-findings.txt  report.html
outputs/coverage/: coverage.json
outputs/raw/: semgrep.json  trivy-sca.json
projects/: SETUP.md
projects/project_exports/: .gitkeep  README.md
src/: __init__.py  cli.py  config.py  cross_file_analyzer.py  enhanced_analyzer.py  exceptions.py  logging_config.py  main.py  orchestrator.py  path_utils.py  sbom_generator.py  tool_ingestion.py  web_app.py
src/auto_remediation/: __init__.py  remediation.py
src/reporting/: html.py
src/scanners/: __init__.py  checkstyle.py  clippy.py  eslint.py  gitleaks.py  golangci_lint.py  phpstan.py  pylint.py  quality_scanner_base.py  rubocop.py  semgrep.py  trivy.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_appsec.py  test_remediation_gemini.py
tool-ingestion/: README.md
(+30 files in other folders)
